--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -43,3 +43,10 @@
     width: max-content;
     padding: 10px 0px;
 }
+
+@media screen and (max-width: 1280px) {
+    .imageContainer{
+        display: none;
+    }
+
+}
