--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,12 @@ a {
     max-width: 475px;
   }
 }
+
+.ql-container{
+  font-size: 28px !important;
+
+}
+
+.quill > .ql-container > .ql-editor.ql-blank::before{
+  color: #b3b3b1
+}
