adjusting ui and where labels are, making sure there is a pointer on add additional images

--- a/src/app/createpost/addimages.module.css
+++ b/src/app/createpost/addimages.module.css
@@ -16,6 +16,7 @@
     justify-content: start;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 
 }
 
@@ -56,6 +57,7 @@
     flex-wrap: wrap;
     gap: 10px;
     width: 100%;
+
 }
 .imageThumbnails{
     display: flex;
