--- a/src/app/edit/[postId]/edit.module.css
+++ b/src/app/edit/[postId]/edit.module.css
@@ -29,6 +29,8 @@
     gap: 20px;
     height: 700px;
     position: relative;
+    border: 1px solid black;
+    margin: 1rem 0 1rem 0;
   }
   
   .button,
