--- a/src/app/edit/[postId]/editAddImages.module.css
+++ b/src/app/edit/[postId]/editAddImages.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     gap: 50px;
 }
 
@@ -13,7 +13,7 @@
 
 .buttonContainer{
     display:flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     gap: 10px;
     cursor: pointer;
