--- a/src/app/createpost/createPost.module.css
+++ b/src/app/createpost/createPost.module.css
@@ -20,6 +20,7 @@
   gap: 20px;
   height: 700px;
   position: relative;
+  margin-bottom: 4rem;
 }
 
 .button,
@@ -75,22 +76,3 @@
   margin-top: 3rem;
 }
 
-.buttons {
-  display: flex;
-  gap: 10px;
-  justify-content: flex-start;
-}
-
-.publish,
-.draft {
-  padding: 10px 20px;
-  border: none;
-  background-color: #1a8917;
-  color: white;
-  cursor: pointer;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 6px;
-}
