--- a/src/app/admin/dashboard/admindashboard.module.css
+++ b/src/app/admin/dashboard/admindashboard.module.css
@@ -45,8 +45,10 @@
     display: flex;
     flex-direction: column;
     
+  }
 
-
+  .title {
+    margin: 1rem 0 1rem 0;
   }
 
   .tableCardContainer {
@@ -54,4 +56,6 @@
     flex-direction: column;
     width: 100%;
     gap: 10px;
+    border-bottom: 1px solid black;
+    padding-bottom: 2rem;
   }
