--- a/src/app/admin/dashboard/admindashboard.module.css
+++ b/src/app/admin/dashboard/admindashboard.module.css
@@ -1,5 +1,15 @@
-.dashboard {
+
+.container{
     padding: 20px;
+  }
+.dashboardContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+  .dashboardTabs {
+    display: flex;
+    flex-direction: column;
   }
   
   .tabs {
@@ -58,4 +68,10 @@
     gap: 10px;
     border-bottom: 1px solid black;
     padding-bottom: 2rem;
+  }
+
+  .createCategory {
+    height: max-content;
+    padding: 1rem;
+    cursor: pointer;
   }
